tests/miniJava/neg/004493_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] java ( Main int [] java ) { return 0 ; } }
